--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@ design for movbile.  The below code are the actual links -->
     <div class="blog">
         <h2>Blogs</h2>
        <br>
+       <button id ='blog-button'>Hide Blogs</button>
         
     <div id="article">
         <ul><h3>Blog 1</h3></ul>
+       
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
