--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ design for movbile.  The below code are the actual links -->
 
 <main>
     <br>
-    <div class="founder">
+    <div id="founder">
         <img src="Ernest_P._Worrell.jpg" alt="Zach McKeel, founder."></img>
-        <!-- <div class="innerText">
-            <p>Founder, Zach, on a good day</p>
-    </div> -->
+            <div class="innerText">
+                <p>Founder, Zach, on a good day...</p>
+            </div>
     </div>
         <div class="about">
         <h3>Who We Are</h3>
